@@ -8,9 +8,9 @@ public class VerifyFactoryWithInstanceInfoTest {
   @Test(dependsOnGroups = { "first" } )
   public void mainCheck() {
     Map<Integer, Integer> numbers = FactoryWithInstanceInfoTest2.getNumbers();
-    assert null != numbers.get(new Integer(42))
+    assert null != numbers.get(Integer.valueOf(42))
       : "Didn't find 42";
-    assert null != numbers.get(new Integer(43))
+    assert null != numbers.get(Integer.valueOf(43))
       : "Didn't find 43";
     assert 2 == numbers.size()
       : "Expected 2 numbers, found " + (numbers.size());
